--- a/.github/workflows/pokedex-deploy.yml
+++ b/.github/workflows/pokedex-deploy.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          path: './pokedex'
+          sparse-checkout: 'pokedex'
+          sparse-checkout-cone-mode: false
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
