--- a/.github/workflows/pokedex-deploy.yml
+++ b/.github/workflows/pokedex-deploy.yml
@@ -30,9 +30,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          sparse-checkout: 'pokedex'
-          sparse-checkout-cone-mode: false
+      - name: Copy files from pokedex
+        run: |
+        cp ./pokedex/dist .
+        cp ./pokedex/package.json .
+        cp ./pokedex/package-lock.json .
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
