add working-directory as default

--- a/.github/workflows/pokedex-deploy.yml
+++ b/.github/workflows/pokedex-deploy.yml
@@ -20,6 +20,10 @@ concurrency:
   group: 'pages'
   cancel-in-progress: true
 
+defaults:
+  run:
+    working-directory: ./pokedex
+
 jobs:
   # Single deploy job since we're just deploying
   deploy:
@@ -30,29 +34,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        working-directory: ./pokedex
       - name: Set up Node
         uses: actions/setup-node@v4
-        working-directory: ./pokedex
         with:
           node-version: 20
           cache: 'npm'
       - name: Install dependencies
-        working-directory: ./pokedex
         run: npm ci
       - name: Build
-        working-directory: ./pokedex
         run: npm run build
       - name: Setup Pages
-        working-directory: ./pokedex
         uses: actions/configure-pages@v4
       - name: Upload artifact
-        working-directory: ./pokedex
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
           path: './dist'
       - name: Deploy to GitHub Pages
-        working-directory: ./pokedex
         id: deployment
         uses: actions/deploy-pages@v4
