changed to absolute path

--- a/.github/workflows/pokedex-deploy.yml
+++ b/.github/workflows/pokedex-deploy.yml
@@ -22,7 +22,7 @@ concurrency:
 
 defaults:
   run:
-    working-directory: ./pokedex
+    working-directory: pokedex
 
 jobs:
   # Single deploy job since we're just deploying
