--- a/.github/workflows/pokedex-deploy.yml
+++ b/.github/workflows/pokedex-deploy.yml
@@ -45,10 +45,10 @@ jobs:
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: Copy dist
+        run: cp -r dist ../dist
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
-        with:
-          path: 'pokedex/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
