--- a/.github/workflows/pokedex-deploy.yml
+++ b/.github/workflows/pokedex-deploy.yml
@@ -46,8 +46,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Copy dist
+        id: dist
         run: cp -r dist ../dist
       - name: Upload artifact
+        if: steps.dist.outcome == 'success'
         uses: actions/upload-pages-artifact@v3
       - name: Deploy to GitHub Pages
         id: deployment
